# Cheetah-Software

./: CMakeLists.txt
CI/: Dockerfile-cheetah-builder  Dockerfile-cheetah-builder-16.04  Dockerfile-cheetah-env-16.04  build-cheetah-16.04.sh
CI/DEBIAN/: control
auto_task_example/: CMakeLists.txt  README.md
auto_task_example/include/: FSM_Auto_Transition.h  FSM_Task.h  FSM_Task_Manager.h
auto_task_example/src/: FSM_Auto_Transition.cpp  FSM_Task_Manager.cpp
bzl_quadruped_sdk/: CMakeLists.txt  README.md
bzl_quadruped_sdk/cmake/: CMakeLists.txt  pack2deb.cmake
bzl_quadruped_sdk/example/: CMakeLists.txt  body_cmd.cpp  gamepad_cmd.cpp
bzl_quadruped_sdk/include/: comm_client.h  comm_server.h  quadruped_comm.h
bzl_quadruped_sdk/include/bzl_quadruped_sdk/: bzl_quadruped.h  bzl_quadruped_cmd.h
bzl_quadruped_sdk/src/: bzl_quadruped.cpp  comm_client.cpp  comm_server.cpp
common/: CMakeLists.txt
common/FootstepPlanner/: CMakeLists.txt
common/include/ControlParameters/: RobotParameters.h
common/include/Controllers/: BZLPositionVelocityEstimator.h  CubicSpline.h  DesiredStateCommand.h  FootSwingTrajectory.h  GaitScheduler.h  LegController.h
common/include/Dynamics/: MiniCheetah.h
common/include/Forcedetect/: ForceDetect.h  readme.txt
common/include/Logger/: Logger.h
common/include/SimUtilities/: GamepadCommand.h  Rs485A1Board.h  SimulatorMessage.h  SpineBoard.h
common/include/Utilities/: PeriodicTask.h  SharedMemory.h
common/src/ControlParameters/: ControlParameters.cpp
common/src/Controllers/: BZLPositionVelocityEstimator.cpp  DesiredStateCommand.cpp  FootSwingTrajectory.cpp  GaitScheduler.cpp  LegController.cpp  PositionVelocityEstimator.cpp
common/src/Forcedetect/: ForceDetect.cpp
common/src/Logger/: Logger.cpp
common/src/SimUtilities/: Rs485A1Board.cpp
common/src/Utilities/: PeriodicTask.cpp  SegfaultHandler.cpp
config/: cheetah-3-defaults.yaml  mc-mit-ctrl-user-parameters-linkage-industrial.yaml  mc-mit-ctrl-user-parameters-linkage.yaml  mc-mit-ctrl-user-parameters-rs485-a1.yaml  mc-mit-ctrl-user-parameters.yaml  mini-cheetah-defaults.yaml
config/dance/: dance.txt
cpack/: pack2deb.cmake
documentation/: 00_一键部署脚本的使用.md  01_日志系统的使用.md  behavior_tree.md  getting_started.md  安全模式关节限位使用说明.md  舞蹈动作dat文件说明.md
documentation/vipdoc/四足机器人BalanceStand模式解析/: 四足机器人BalanceStand模式解析.md
documentation/vipdoc/四足机器人FrontJump模式解析/: 四足机器人FrontJump模式解析.md
documentation/vipdoc/四足机器人JointPD模式解析/: 四足机器人JointPD模式解析.md
documentation/vipdoc/四足机器人Passive模式解析/: 四足机器人Passive模式解析.md
documentation/vipdoc/四足机器人StandUp模式解析/: 四足机器人StandUp模式解析.md
documentation/vipdoc/四足机器人伪逆/: 四足机器人伪逆.md
documentation/vipdoc/四足机器人信号/: 四足机器人信号.md
lcm-types/: body_cmd_lcmt.lcm  body_state_lcmt.lcm  cmpc_gait_switch_t.lcm  collosion.lcm  gamepad_lcmt.lcm  i2c_data_lcmt.lcm  leg_control_data_lcmt.lcm  rs485_a1_command_t.lcm  rs485_a1_data_t.lcm  test_spi_command_t.lcm
lcm/lcm-cmake/: cpack.cmake  lcmUtilities.cmake
log/: CMakeLists.txt  logger.h
log/example/: main.cpp
rc_test/: CMakeLists.txt  rc_test_main.cpp
robot/: CMakeLists.txt
robot/include/: HardwareBridge.h  RobotController.h  RobotRunner.h  SimulationBridge.h
robot/include/rt/: rt_i2c.h  rt_led.h  rt_rc_interface.h  rt_rs485_a1.h  rt_spi.h  rt_voice.h
robot/include/rt/rs485_a1/: LSerial.h
robot/src/: HardwareBridge.cpp  RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
robot/src/rt/: rt_i2c.cpp  rt_led.cpp  rt_rc_interface.cpp  rt_rs485_a1.cpp  rt_serial.cpp  rt_spi.cpp  rt_vectornav.cpp  rt_voice.cpp
robot/src/rt/rs485_a1_lib/: .gitignore
scripts/: 00_run_gamepad.sh  01_run_robot.sh  02_run_sim.sh  03_run_launch_spy.sh  04_run_log_convert.sh  autostart.sh  bzl_quadruped_build_and_send.sh  make_types.sh  network_config.py
sim/: CMakeLists.txt
sim/include/: RobotInterface.h  Simulation.h
sim/src/: DrawList.cpp  GameController.cpp  RobotInterface.cpp  SimControlPanel.cpp  Simulation.cpp
user/: CMakeLists.txt
user/BZL_Controller/: BZL_Controller.cpp  BZL_Controller.hpp  BZL_UserParameters.h  CMakeLists.txt  main.cpp
user/BZL_Controller/Controllers/BackFlip/: BackFlipCtrl.cpp  BackFlipCtrl.hpp  DataReadCtrl.hpp  DataReader.cpp  DataReader.hpp
user/BZL_Controller/Controllers/BalanceController/: BalanceController.cpp  BalanceController.hpp  BalanceControllerVBL.cpp  BalanceControllerVBL.hpp
user/BZL_Controller/Controllers/VisionMPC/: CMakeLists.txt  VisionMPCLocomotion.cpp  VisionMPCLocomotion.h  VisionSolverMPC.cpp
user/BZL_Controller/Controllers/WBC/WBIC/: CMakeLists.txt  WBIC.hpp
user/BZL_Controller/Controllers/WBC_Ctrl/: CMakeLists.txt  WBC_Ctrl.cpp  WBC_Ctrl.hpp
user/BZL_Controller/Controllers/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp  LocomotionCtrl.hpp
user/BZL_Controller/Controllers/WBC_Ctrl/TaskSet/: BodyOriTask.hpp  BodyRyRzTask.hpp  LinkPosTask.hpp  LocalHeadPosTask.hpp  LocalRollTask.hpp  LocalTailPosTask.hpp
user/BZL_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  Gait.cpp  Gait.h  RobotState.cpp  RobotState.h  SolverMPC.cpp  SolverMPC.h  convexMPC_interface.cpp  convexMPC_interface.h
user/BZL_Controller/FSM_States/: ControlFSM.cpp  ControlFSM.h  ControlFSMData.h  FSM_State.cpp  FSM_State.h  FSM_State_BackFlip.cpp  FSM_State_BackFlip.h  FSM_State_BalanceStand.cpp  FSM_State_BalanceStand.h  FSM_State_Damp.cpp  FSM_State_Damp.h  FSM_State_FrontJump.cpp  FSM_State_FrontJump.h  FSM_State_ImpedanceControl.cpp  FSM_State_ImpedanceControl.h  FSM_State_JointPD.cpp  FSM_State_JointPD.h  FSM_State_Locomotion.cpp  FSM_State_Locomotion.h  FSM_State_Passive.cpp  FSM_State_Passive.h  FSM_State_Prone.cpp  FSM_State_Prone.h  FSM_State_RecoveryStand.cpp  FSM_State_RecoveryStand.h  FSM_State_StandUp.cpp  FSM_State_StandUp.h  FSM_State_Vision.cpp  FSM_State_Vision.h  SafetyChecker.cpp  SafetyChecker.h  behavior_controller.cpp  behavior_controller.h
user/Example_Leg_InvDyn/: CMakeLists.txt  Leg_InvDyn_Controller.cpp
user/JPos_Controller/: CMakeLists.txt
user/MiniCheetahSpi_Controller/: CMakeLists.txt  MiniCheetahSpi_Controller.h
(+34 files in other folders)
